# rust-todo

./: .env.template  .gitignore  Cargo.toml  README.md  docker-compose.yml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/common/: database.rs
src/module/todo/application/: service.rs
src/module/todo/domain/: todo.rs
src/module/todo/infra/: mod.rs
src/module/todo/infra/persistence/: repository.rs
src/module/todo/infra/rest/: mod.rs  router.rs
src/module/todo/infra/rest/req/: create_todo_req.rs  mod.rs  update_todo_req.rs
src/module/todo/infra/rest/res/: mod.rs  todo_delete_res.rs  todo_res.rs
