[package]
name = "todo"
version = "1.0.0"
edition = "2021"
authors = ["himitery@gmail.com"]

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
axum = { version = "0.7.5", features = ["macros", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15.0"
log = "0.4.21"
